--- a/app/src/main/res/layout/rockpaperscissors_fragment.xml
+++ b/app/src/main/res/layout/rockpaperscissors_fragment.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.upgautam.uddhav.rpsgame.RockPaperScissorsActivity">
+    tools:context="com.upgautam.uddhav.rpsgame.uicontrollers.activity.RockPaperScissorsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
             android:layout_weight="1"
             android:padding="1dp">
 
-            <com.linecorp.reviewexam.rockpaperscissors.RockButton
+            <com.upgautam.uddhav.rpsgame.uicontrollers.RockButton
                 android:id="@+id/rock_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" />
@@ -34,7 +34,7 @@
             android:layout_weight="1"
             android:padding="1dp">
 
-            <com.linecorp.reviewexam.rockpaperscissors.ScissorsButton
+            <com.upgautam.uddhav.rpsgame.uicontrollers.ScissorsButton
                 android:id="@+id/scissors_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" />
@@ -47,7 +47,7 @@
             android:layout_weight="1"
             android:padding="1dp">
 
-            <com.linecorp.reviewexam.rockpaperscissors.PaperButton
+            <com.upgautam.uddhav.rpsgame.uicontrollers.PaperButton
                 android:id="@+id/paper_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" />
